force-app/main/default/objects/Standing_Order__c/Standing_Order__c.object-meta.xml
<CustomObject>
    <label>Standing Order</label>
    <nameField>
        <label>Standing Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Standing Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>