force-app/main/default/objects/Standing_Order__c/fields/Account_Accpac_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Accpac_Number__c</fullName>
    <formula>Account__r.AccPac_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Accpac Number</label>
    <type>Text</type>
</CustomField>