force-app/main/default/objects/Standing_Order__c/fields/Expected_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Ship_Date__c</fullName>
    <inlineHelpText>The next date this standing order will be invoiced (if recurring).</inlineHelpText>
    <label>Expected Ship Date</label>
    <type>Date</type>
</CustomField>