force-app/main/default/objects/Standing_Order__c/fields/Location_Code__c.field-meta.xml
<CustomField>
    <fullName>Location_Code__c</fullName>
    <description>Accpac location code from Order Header</description>
    <label>Location Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>