force-app/main/default/objects/Standing_Order__c/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <inlineHelpText>The date this standing order was created.</inlineHelpText>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>