force-app/main/default/objects/Standing_Order__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <externalId>true</externalId>
    <label>Order Number</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>