force-app/main/default/objects/Standing_Order__c/fields/SalesPerson_Code__c.field-meta.xml
<CustomField>
    <fullName>SalesPerson_Code__c</fullName>
    <label>SalesPerson Code</label>
    <length>70</length>
    <type>Text</type>
</CustomField>