force-app/main/default/objects/Standing_Order__c/fields/Service_Types__c.field-meta.xml
<CustomField>
    <fullName>Service_Types__c</fullName>
    <description>Service types of the line items</description>
    <label>SO Service Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anti Splash</fullName>
            </value>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>CannonClean</fullName>
            </value>
            <value>
                <fullName>CannonControl</fullName>
            </value>
            <value>
                <fullName>CannonFresh</fullName>
            </value>
            <value>
                <fullName>Chemical</fullName>
            </value>
            <value>
                <fullName>Disposal</fullName>
            </value>
            <value>
                <fullName>Ecolo</fullName>
            </value>
            <value>
                <fullName>Kaivac - STI</fullName>
            </value>
            <value>
                <fullName>Life</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pest</fullName>
            </value>
            <value>
                <fullName>Pest Special</fullName>
            </value>
            <value>
                <fullName>Sani - Fixture Cleaning</fullName>
            </value>
            <value>
                <fullName>Soap</fullName>
            </value>
            <value>
                <fullName>Toilet Seat Sanitizer</fullName>
            </value>
            <value>
                <fullName>Vending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>