force-app/main/default/objects/Standing_Order__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <label>Total</label>
    <summarizedField>Standing_Order_Line_Item__c.Price__c</summarizedField>
    <summaryFilterItems>
        <field>Standing_Order_Line_Item__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Standing_Order_Line_Item__c.Standing_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>