force-app/main/default/objects/Standing_Order__c/fields/Upsert_Date__c.field-meta.xml
<CustomField>
    <fullName>Upsert_Date__c</fullName>
    <description>The date/time the data was exported from Accpac for the upsert.</description>
    <label>Upsert Date</label>
    <type>DateTime</type>
</CustomField>