force-app/main/default/objects/Standing_Order__c/listViews/Will_become_inactive.listView-meta.xml
<ListView>
    <fullName>Will_become_inactive</fullName>
    <columns>Active__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>SalesPerson_Name__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>lessOrEqual</operation>
        <value>LAST_WEEK</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Will become inactive</label>
    <sharedTo>
        <role>CEO</role>
    </sharedTo>
</ListView>